INCLUDE_DIRECTORIES(${ALL_INC_DIRS})

ADD_EXECUTABLE(avida primitive.cc)
IF(MSVC)
  TARGET_LINK_LIBRARIES(avida main classification cpu event analyze drivers analyze cpu tools main)
ELSE(MSVC)
  TARGET_LINK_LIBRARIES(avida main classification cpu event analyze drivers analyze cpu tools pthread main)
ENDIF(MSVC)
LINK_DIRECTORIES(${ALL_LIB_DIRS})
INSTALL_TARGETS(/work avida)
