INCLUDE_DIRECTORIES(${ALL_INC_DIRS})

ADD_EXECUTABLE(avida primitive.cc)
IF(MSVC)
  TARGET_LINK_LIBRARIES(avida main classification cpu event analyze drivers analyze cpu tools actions main archive boost_serialization)
ELSE(MSVC)
  TARGET_LINK_LIBRARIES(avida main classification cpu event analyze drivers analyze cpu tools actions pthread main archive boost_serialization)
ENDIF(MSVC)
LINK_DIRECTORIES(${ALL_LIB_DIRS})
INSTALL_TARGETS(/work avida)
